fix e-books iframe height on mobile devices

--- a/styles/scss/e-books.scss
+++ b/styles/scss/e-books.scss
@@ -47,6 +47,12 @@
         padding: 0;
     }
 
+    .e-book-container {
+        iframe {
+            height: 550px;
+        }
+    }
+
     .source {
         text-align: center;
     }
